# trash_bin

./: CMakeLists.txt  README.md  conanfile.py
include/trash_bin/: trash_bin.hpp
tests/: test1.cpp
